welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: '<-' expected but ')' found.
  for (nbpas)
            ^Program:9: error: illegal start of simple expression
  }
  ^